--- a/pages/app/fechamento-caixa.html
+++ b/pages/app/fechamento-caixa.html
@@ -1,2 +1,36 @@
-<!-- Módulo Fechamento de Caixa: apenas teste -->
-<h1>Fechamento de Caixa</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fechamento de Caixa – InfoSys</title>
+
+  <!-- 🎨 Estilos -->
+  <link rel="icon" href="../../assets/images/favicon.png" />
+  <link rel="stylesheet" href="../../css/header.css" />
+  <link rel="stylesheet" href="../../css/sidebar.css" />
+  <link rel="stylesheet" href="../../css/fechamento-caixa.css" />
+  <link rel="stylesheet" href="../../css/alertas.css" />
+
+  <!-- 🔒 Segurança e estrutura -->
+  <script src="../../js/csp.js"></script>
+  <script src="../../js/seguranca.js" defer></script>
+  <script src="../../js/inatividade.js" defer></script>
+  <script src="../../js/header.js" defer></script>
+  <script src="../../js/sidebar.js" defer></script>
+</head>
+<body>
+  <div id="site-header"></div>
+  <div id="site-sidebar"></div>
+
+  <main class="main-content">
+    <div class="container">
+      <h2>Fechamento de Caixa</h2>
+      <p>Registre e visualize os fechamentos de caixa diários da clínica.</p>
+    </div>
+  </main>
+
+  <script type="module" src="../../js/fechamento-caixa.js" defer></script>
+</body>
+</html>
+
