--- a/pages/app/relatorios.html
+++ b/pages/app/relatorios.html
@@ -1,2 +1,37 @@
-<!-- Módulo Fechamento de Caixa: apenas teste -->
-<h1>Relatórios</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Relatórios – InfoSys</title>
+
+  <!-- Estilos -->
+  <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
+  <link rel="stylesheet" href="../../css/header.css" />
+  <link rel="stylesheet" href="../../css/sidebar.css" />
+  <link rel="stylesheet" href="../../css/relatorios.css" />
+  <link rel="stylesheet" href="../../css/alertas.css">
+
+  <!-- Segurança e base do sistema -->
+  <script src="../../js/csp.js"></script>
+  <script src="../../js/seguranca.js" defer></script>
+  <script src="../../js/inatividade.js" defer></script>
+  <script src="../../js/header.js" defer></script>
+  <script src="../../js/sidebar.js" defer></script>
+  
+</head>
+<body>
+  <div id="site-header"></div>
+  <div id="site-sidebar"></div>
+
+  <main class="main-content">
+    <div class="container">
+      <h2>Relatórios</h2>
+      <p>Selecione e gere relatórios de desempenho, financeiro e operacionais.</p>
+    </div>
+  </main>
+
+  <script type="module" src="../../js/relatorios.js" defer></script>
+</body>
+</html>
+
