--- a/pages/app/anotacoes-importantes.html
+++ b/pages/app/anotacoes-importantes.html
@@ -1,2 +1,37 @@
-<!-- Módulo Fechamento de Caixa: apenas teste -->
-<h1>Anotações Importantes</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anotações Importantes – InfoSys</title>
+
+  <!-- 🎨 Estilos -->
+  <link rel="icon" href="../../assets/images/favicon.png" />
+  <link rel="stylesheet" href="../../css/header.css" />
+  <link rel="stylesheet" href="../../css/sidebar.css" />
+  <link rel="stylesheet" href="../../css/anotacoes-importantes.css" />
+  <link rel="stylesheet" href="../../css/alertas.css" />
+
+  <!-- 🔒 Segurança -->
+  <script src="../../js/csp.js"></script>
+  <script src="../../js/seguranca.js" defer></script>
+  <script src="../../js/inatividade.js" defer></script>
+  <script src="../../js/header.js" defer></script>
+  <script src="../../js/sidebar.js" defer></script>
+</head>
+<body>
+  <div id="site-header"></div>
+  <div id="site-sidebar"></div>
+
+  <main class="main-content">
+    <div class="container">
+      <h2>Anotações Importantes</h2>
+      <p>Registre recados, lembretes ou orientações gerais para a equipe.</p>
+    </div>
+  </main>
+
+  <script type="module" src="../../js/anotacoes-importantes.js" defer></script>
+</body>
+</html>
+
+
