--- a/pages/app/clientes-indesejaveis.html
+++ b/pages/app/clientes-indesejaveis.html
@@ -1,2 +1,35 @@
-<!-- Módulo Fechamento de Caixa: apenas teste -->
-<h1>Clientes Indesejaveis</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clientes Indesejáveis – InfoSys</title>
+
+  <!-- 🎨 Estilos -->
+  <link rel="icon" href="../../assets/images/favicon.png" />
+  <link rel="stylesheet" href="../../css/header.css" />
+  <link rel="stylesheet" href="../../css/sidebar.css" />
+  <link rel="stylesheet" href="../../css/clientes-indesejaveis.css" />
+  <link rel="stylesheet" href="../../css/alertas.css" />
+
+  <!-- 🔒 Segurança e estrutura -->
+  <script src="../../js/csp.js"></script>
+  <script src="../../js/seguranca.js" defer></script>
+  <script src="../../js/inatividade.js" defer></script>
+  <script src="../../js/header.js" defer></script>
+  <script src="../../js/sidebar.js" defer></script>
+</head>
+<body>
+  <div id="site-header"></div>
+  <div id="site-sidebar"></div>
+
+  <main class="main-content">
+    <div class="container">
+      <h2>Lista de Clientes Indesejáveis</h2>
+      <p>Adicione ou consulte clientes que não devem ter acesso a determinados serviços.</p>
+    </div>
+  </main>
+
+  <script type="module" src="../../js/clientes-indesejaveis.js" defer></script>
+</body>
+</html>
