--- a/pages/app/gerenciar-conta.html
+++ b/pages/app/gerenciar-conta.html
@@ -3,39 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gerenciar Conta - InfoSys</title>
-
-  <!-- Segurança: redireciona se não autenticado -->
-  <script src="../../js/seguranca.js" defer></script>
-
-  <!-- Monitoramento de inatividade -->
-  <script src="../../js/inatividade.js" defer></script>
-
-  <!-- Content Security Policy -->
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self';
-          style-src 'self' 'unsafe-inline';
-          img-src 'self' data:;
-          connect-src 'self'
-            https://script.google.com
-            https://script.googleusercontent.com;
-        ">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
+  <title>Gerenciar Conta – InfoSys</title>
 
   <!-- Estilos -->
+  <link rel="icon" href="../../assets/images/favicon.png" />
   <link rel="stylesheet" href="../../css/header.css" />
+  <link rel="stylesheet" href="../../css/sidebar.css" />
   <link rel="stylesheet" href="../../css/gerenciar-conta.css" />
+  <link rel="stylesheet" href="../../css/alertas.css" />
+  <link rel="stylesheet" href="../../css/utils.css" />  <!-- Spinner styles -->
+
+  <!-- Segurança & CSP -->
+  <script src="../../js/csp.js"></script>
+  <script src="../../js/seguranca.js" defer></script>
+  <script src="../../js/inatividade.js" defer></script>
+
+  <!-- Spinner control -->
+  <script type="module" src="../../js/spinner.js" defer></script>
+
+  <!-- Fragmentos e scripts -->
+  <script src="../../js/header.js" defer></script>
+  <script src="../../js/sidebar.js" defer></script>
+  <script type="module" src="../../js/alertas.js" defer></script>
+  <script type="module" src="../../js/gerenciar-conta.js" defer></script>
 </head>
 <body>
-  
-  <!-- Header dinâmico será injetado -->
   <div id="site-header"></div>
+  <div id="site-sidebar"></div>
 
-  <!-- Conteúdo principal -->
   <main class="container">
     <h2>Gerenciar Conta</h2>
 
@@ -47,12 +42,13 @@
 
     <button id="btn-atualizar">Atualizar Dados</button>
 
-    <h2 style="margin-top: 2.5rem;">Acesso</h2>
+    <h2 style="margin-top:2.5rem">Acesso</h2>
     <button id="btn-alterar-senha">Alterar senha</button>
   </main>
 
-  <!-- Scripts -->
-  <script type="module" src="../../js/header.js"></script>
-  <script type="module" src="../../js/gerenciar-conta.js"></script>
+  <!-- Spinner Overlay -->
+  <div id="spinner-overlay">
+    <div class="spinner"></div>
+  </div>
 </body>
 </html>
