--- a/pages/app/usuarios.html
+++ b/pages/app/usuarios.html
@@ -5,89 +5,97 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Usuários – InfoSys</title>
 
-  <!-- Segurança -->
+  <!-- 🎨 Estilos -->
+  <link rel="icon" href="../../assets/images/favicon.png" />
+  <link rel="stylesheet" href="../../css/header.css" />
+  <link rel="stylesheet" href="../../css/sidebar.css" />
+  <link rel="stylesheet" href="../../css/usuarios.css" />
+  <link rel="stylesheet" href="../../css/alertas.css" />
+  <link rel="stylesheet" href="../../css/utils.css" />
+
+  <!-- 🔒 Segurança e CSP -->
+  <script src="../../js/csp.js"></script>
   <script src="../../js/seguranca.js" defer></script>
   <script src="../../js/inatividade.js" defer></script>
 
-  <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
-
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self' 'unsafe-inline';
-          style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-          img-src 'self' data:;
-          connect-src 'self'
-                      https://script.google.com
-                      https://script.googleusercontent.com
-                      https://api.ipify.org;
-        ">
-
-  <!-- Estilos e scripts -->
-  <link rel="stylesheet" href="../../css/header.css" />
+  <!-- 🧩 Fragmentos e scripts -->
   <script src="../../js/header.js" defer></script>
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="../../css/usuarios.css" />
+  <script src="../../js/sidebar.js" defer></script>
+  <script type="module" src="../../js/spinner.js" defer></script>
+  <script type="module" src="../../js/alertas.js" defer></script>
   <script type="module" src="../../js/usuarios.js" defer></script>
 </head>
 <body>
+  <!-- Header será injetado aqui -->
   <div id="site-header"></div>
 
-  <div class="container">
-    <h2>Usuários Cadastrados</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>E-mail</th>
-          <th>Nível</th>
-          <th>Status</th>
-          <th>Último Login</th>
-          <th>Ações</th>
-        </tr>
-      </thead>
-      <tbody id="corpo-tabela">
-        <tr><td colspan="5">Carregando...</td></tr>
-      </tbody>
-    </table>
-  </div>
+  <!-- Sidebar será injetado aqui -->
+  <div id="site-sidebar"></div>
 
-  <!-- modal de edição -->
-  <div class="modal" id="modal-edicao">
-    <div class="modal-content">
-      <h3>Editar Usuário</h3>
-      <label for="modal-nivel">Nível</label>
-      <select id="modal-nivel"></select>
-      <label for="modal-status">Status</label>
-      <select id="modal-status">
-        <option>Ativo</option>
-        <option>Inativo</option>
-      </select>
-      <div class="actions">
-        <button type="button" class="cancelar" id="btn-cancelar">Cancelar</button>
-        <button type="button" class="salvar" id="btn-salvar">Salvar</button>
+  <!-- Conteúdo principal -->
+  <main class="main-content">
+    <div class="container">
+      <h2>Usuários Cadastrados</h2>
+
+      <!-- wrapper para scroll horizontal se necessário -->
+      <div class="table-wrapper">
+        <table>
+          <thead>
+            <tr>
+              <th>E-mail</th>
+              <th>Nível</th>
+              <th>Status</th>
+              <th>Último Login</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody id="corpo-tabela">
+            <tr><td colspan="5">Carregando...</td></tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!-- Modais de edição / sucesso / permissão -->
+      <div class="modal" id="modal-edicao">
+        <div class="modal-content">
+          <h3>Editar Usuário</h3>
+          <label for="modal-nivel">Nível</label>
+          <select id="modal-nivel"></select>
+          <label for="modal-status">Status</label>
+          <select id="modal-status">
+            <option>Ativo</option>
+            <option>Inativo</option>
+          </select>
+          <div class="actions">
+            <button type="button" class="cancelar" id="btn-cancelar">Cancelar</button>
+            <button type="button" class="salvar"   id="btn-salvar">Salvar</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal" id="modal-sucesso">
+        <div class="modal-content sucesso">
+          <h3>Alterações Salvas</h3>
+          <p><strong class="email"></strong></p>
+          <p>Nível: <strong class="nivel"></strong></p>
+          <p>Status: <strong class="status"></strong></p>
+          <button type="button" class="fechar" id="btn-fechar-sucesso">Fechar</button>
+        </div>
+      </div>
+
+      <div class="modal" id="modal-permissao">
+        <div class="modal-content sucesso">
+          <h3>Acesso Negado</h3>
+          <p>Você não tem permissão para editar este usuário.</p>
+          <button type="button" class="fechar" id="btn-fechar-permissao">Fechar</button>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
 
-  <!-- modal de sucesso -->
-  <div class="modal" id="modal-sucesso">
-    <div class="modal-content sucesso">
-      <h3>Alterações Salvas</h3>
-      <p><strong class="email"></strong></p>
-      <p>Nível: <strong class="nivel"></strong></p>
-      <p>Status: <strong class="status"></strong></p>
-      <button type="button" class="fechar" id="btn-fechar-sucesso">Fechar</button>
-    </div>
-  </div>
-
-  <!-- modal de permissão negada -->
-  <div class="modal" id="modal-permissao">
-    <div class="modal-content sucesso">
-      <h3>Acesso Negado</h3>
-      <p>Você não tem permissão para editar este usuário.</p>
-      <button type="button" class="fechar" id="btn-fechar-permissao">Fechar</button>
-    </div>
+  <!-- Spinner Overlay -->
+  <div id="spinner-overlay">
+    <div class="spinner"></div>
   </div>
 </body>
 </html>
