--- a/pages/public/alterar-senha.html
+++ b/pages/public/alterar-senha.html
@@ -5,24 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Trocar senha – InfoSys</title>
 
-  <!-- Segurança: redireciona se não autenticado direciona para index.html -->
+  <!-- CSP via JavaScript (centralizado) -->
+  <script src="../../js/csp.js"></script>
+
+  <!-- Segurança: redireciona se não autenticado -->
   <script src="../../js/seguranca.js" defer></script>
 
-  <!-- Content Security Policy -->
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self' 'unsafe-inline';
-          style-src 'self' 'unsafe-inline';
-          img-src 'self' data:;
-          connect-src 'self'
-                      https://script.google.com
-                      https://script.googleusercontent.com
-                      https://api.ipify.org;
-        ">
+  <!-- monitoramento de inatividade -->
+  <script src="../../js/inatividade.js" defer></script>
 
+  <!-- Estilos -->
   <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
   <link rel="stylesheet" href="../../css/alterar-senha.css" />
+  <link rel="stylesheet" href="../../css/alertas.css" /> <!-- 🔹 ESSENCIAL para alertas personalizados -->
 </head>
 <body>
   <div class="card">
@@ -67,6 +62,7 @@
     </form>
   </div>
 
+  <!-- Script principal com suporte a módulos (usa import/export) -->
   <script type="module" src="../../js/alterar-senha.js"></script>
 </body>
 </html>
